syntax = "proto3";

package bot.proto;

message QuestionAnswer {
    int64 task_id = 1;
    int32 index = 2;
    bool is_correct = 3;
    int64 time_asked_ts = 4;
}

message Command {
    oneof command {
        QuestionAnswer question_answer = 1;
    }
}